fix sponsor logo overlap on some resolutions

--- a/themes/gophercon/static/css/main.css
+++ b/themes/gophercon/static/css/main.css
@@ -1086,9 +1086,6 @@ footer {
     	margin-bottom: 0;
 		padding: 0px 0px;
 	}
-	main .home-sponsors .diamond a img {
-		max-width: 110px;
-	}
 	
 	body {
 		margin: 0;
